syntax = "proto3";
package bitswap.pb;
option go_package = "openhashdb/protobuf/pb";

message Message {
    message Wantlist {
        message Entry {
            bytes hash = 1; // The hash of the block
            int32 priority = 2; // The priority of the want
            enum WantType {
                Have = 0;
                Block = 1;
            }
            WantType want_type = 3; // Whether this is a want-have or want-block
        }
        repeated Entry entries = 1;
        bool full = 2; // If true, this is the full wantlist
    }

    message Block {
        bytes hash = 1;
        bytes data = 2;
    }

    message BlockPresence {
        bytes hash = 1;
        enum PresenceType {
            Have = 0;
            DontHave = 1;
        }
        PresenceType type = 2;
    }

    Wantlist wantlist = 1;
    repeated Block blocks = 2;
    repeated BlockPresence block_presences = 3;

    // A request for a peer to fetch a block from another peer and forward it.
    message DelegatedFetchRequest {
        bytes hash = 1;
        string target_peer_id = 2; // The peer ID to fetch the block from.
        string requestor_peer_id = 3; // The original peer who wants the block.
    }
    repeated DelegatedFetchRequest delegated_requests = 4; // New field
}
